tests/cases/typecheck/property_access/out_of_bounds_access.stderr
error[0015]: the field `2` is not present within `(1_i32, 2_i32)`
 --> $DIR/out_of_bounds_access.hash:6:3
5 |   main := () -> i32 => {
6 |     t.2
  |     ^ `(1_i32, 2_i32)` does not contain the property `2`
7 |   };
