tests/cases/typecheck/property_access/out_of_bounds_access.hash
// run=fail
main := () -> i32 => {
  t := (1, 2)
  t.2
}
